--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -1,10 +1,19 @@
 {
-    "dependencies": {
-        "express": "4.17.1",
-        "nodemon": "2.0.7"
-    },
-    "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon"
-    }
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.10.15",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "eslint": "^7.28.0"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon"
+  }
 }
