--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: "3.9"
 
 services:
+  proxy:
+    container_name: proxy
+    build:
+      dockerfile: Dockerfile
+      context: ./proxy
+    restart: always
+    ports:
+      - 3050:80
+    networks:
+      - frontend
+      - backend
+    depends_on:
+      - db
+      - api
+      - web
+
   db:
     container_name: db
     image: mongo:4.4.6
@@ -18,8 +34,6 @@ services:
       - ./backend/db/entrypoint:/docker-entrypoint-initdb.d
     expose:
       - 27017
-    ports: # Expose for MongoDB Compass
-      - 27017:27017
     networks:
       - backend
     logging:
@@ -40,8 +54,6 @@ services:
       - /app/node_modules
     expose:
       - 5000
-    ports:
-      - 5000:5000 # Expose for Postman
     networks:
       - backend
 
@@ -53,12 +65,12 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    expose:
+      - 3000
     ports:
       - 3000:3000
     networks:
       - frontend
-    depends_on:
-      - db
 
 networks:
   frontend:
