backend restructured and configs updated

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "eslint": "^7.28.0"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node app/index.js",
     "dev": "nodemon"
   }
 }
